# cheatsheet-generator

./: API_CONFIG.py  Makefile  README.md  __init__.py  cli.py  exceptions.py  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_async.txt  run_generator.py  setup_env.py  test_env.py  tox.ini
.github/workflows/: test.yml  tests.yml  upload-assets.yml
config/: API_CONFIG.py  __init__.py  global.yaml  lib_config.py
outputs/cheatsheets/: bash_cheatsheet_20250906_232121.yml  kubernetes_cheatsheet_20250810_165017.yml
prompt_templates/: BasePrompt.py  default_prompt.py  example_cheatsheet.yml  main_prompt.py  prompt_config.py
prompting/: BasePrompt.py  default_prompt.py  prompt_config.py
templates/: readme.md  temp_validation.md  templating_app.py
templates/config/: global.yaml
templates/content/preview/: config.yaml  content.yaml
templates/templates/base/: cheatsheet.md  music_theory.md  programming_cheatsheet.md.j2
templates/templates/styles/: custom.latex
templating_app/: Makefile  main.py  plan.md  temp_validation.md  template_requirements.txt  templating_app.py
templating_app/content/preview/: config.yaml
templating_app/content/theorycardtest/: config.yaml  content.yaml
templating_app/music21_example_workflow/: NEXT_STEPS.md  README.md  music21_to_svg.py  notes.md  requirements.txt  simple_example.py  test.py
templating_app/output/html/: preview.html  theorycardtest.html
templating_app/templates/base/: cheatsheet.md  music_theory.md  programming_cheatsheet.md.j2
templating_app/templates/styles/: custom.latex  main.css
templating_app/tests/: conftest.py  test_templates.py
tests/: conftest.py  strategy.md  test_env.py  test_prompt.py  test_save_file.py  test_yaml_parsing.py
todos/: TODO.md
tool_testing.py/: TTS-options.py
topics/: bash.yml  mock_topic.yml  template.yml
tts/: TTS-options.py  tts_a.py
utils/: api_calls.py  api_utils.py  api_utils_async.py  command_validator.py  env_loader.py  file_management.py  general_utils.py  parse_yaml.py  voiceover.py
